--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,7 @@ header {
   list-style: none;
   display: flex;
   gap: 20px;
+  z-index: 1;
   font-family: "Inter", sans-serif;
 }
 
@@ -108,7 +109,7 @@ header {
 }
 
 .quote-btn:hover {
-  background:#d48b1e;
+  background: #d48b1e;
 }
 
 .hero {
@@ -125,9 +126,9 @@ header {
 
 .hero-content {
   position: relative;
-  z-index: 2;
+  z-index: 1;
   color: #ffffff;
-  left:-20%;
+  left: -20%;
   margin: 40px;
   max-width: 600px;
   padding: 20px;
@@ -171,6 +172,126 @@ header {
 .btn:hover span {
   transform: translateX(5px);
 }
+
+.service {
+  display: flex;
+  align-items: center;
+  min-height: 100vh;
+}
+.split-container {
+  display: flex;
+  width: 100%;
+  height: 627px;
+}
+.split {
+  /* position: relative; */
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  overflow: hidden;
+  transition: flex 0.5s ease-in-out;
+}
+
+/* Left Section */
+.left {
+  background: url(/assets/images/image1.png);
+  background-position: center;
+  opacity:0.23;
+}
+
+/* Right Section */
+.right {
+  background: url(/assets/images/image2.png);
+  background-size: cover;
+  background-position: center;
+  opacity:0.5;
+}
+
+/* Content Styling */
+.content {
+  z-index: 5;
+  top: 40px;
+  padding: 50px;
+  /* background: rgba(0, 0, 0, 0.5); */
+}
+ h2 {
+width: 390px;
+font-family: 'Inter';
+line-height: 28px;
+text-align: right;
+margin-bottom: 10px;
+}
+
+p {
+font-family: 'Inter';
+font-weight: 400;
+font-size: 15px;
+line-height: 22px;
+text-align: right;
+margin-bottom: 30px;
+}
+
+/* CTA Button */
+.btn-1 {
+  display: inline-flex;
+  align-items: center;
+  background: #f5a623;
+  color: white;
+  padding: 12px 20px;
+  text-decoration: none;
+  border-radius: 6px;
+  transition: 0.3s ease;
+font-family: 'Inter';
+font-weight: 600;
+font-size: 18px;
+line-height: 22px;
+}
+
+.btn-1 span {
+  margin-left: 8px;
+  transition: 0.3s ease;
+}
+
+.btn-1:hover {
+  background: #d48b1e;
+}
+
+.btn-1:hover span {
+  transform: translateX(5px);
+}
+
+/* Hover Effects */
+.split:hover {
+  flex: 1.2;
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .split-container {
+    flex-direction: column;
+  }
+
+  .split {
+    height: 50vh;
+  }
+
+  .split:hover {
+    flex: 1;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+  }
+
+  .btn-1 {
+    font-size: 0.9rem;
+    padding: 10px 15px;
+  }
+}
+
 @media (max-width: 768px) {
   .hero-content {
     text-align: center;
@@ -178,7 +299,6 @@ header {
 
   .hero-content h1 {
     font-size: 30px;
-
   }
 
   .hero-content p {
